--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ configparser==6.0.0
 etelemetry==0.3.0
 filelock==3.12.2
 fitz==0.0.1.dev2
+frontend==0.0.3
 future==0.18.3
 gitdb==4.0.10
 GitPython==3.1.32
